# wcs_changping

./: .gitignore  CMakeLists.txt  config.txt
include/ADODatabase/: ACS_Database.h  ADODatabase.h  ApiClient.h  ApiServer.h  DatabaseManage.h  MAP_Database.h  Oracle_Database.h  RabbitMQService.h  RabbitMqClient.h  WCS_Database.h
include/Common/: Common.h  Config.h  Geometry.h
include/Core/: Event_Handler.h  ModelBridge.h  ModelEquipment.h  ModelStationConfirm.h  ModelStationParking.h  ModelStorage.h  Sub_Task.h  Task_Chain.h  Task_Chain_Manage.h  Task_Define.h
include/Manage/: AGV_Manage.h  AGV_System_Manage.h  Battery_Manage.h  Config_Manage.h  Manage_Define.h  Mode_Manage.h  Order_Manage.h  PLC_Manage.h  Parking_Manage.h  Storage_Manage.h  fins_structure.h  finstcpcommand.h
include/comm/: ByteList.hpp  CRC.h  Comm.h  KHBoostInterproc.h  KHUtils.hpp  Log.h  Manage.hpp  MyDefine.h  Object.h  QtComm.h  Rand.hpp  TimerDiff.h  buffer_con.hpp  simplelog.h
include/transferdevice/: CRC.h  SerialPort.h  TCP_Client.h  TCP_Server.h  TransferDevice.h
resource/: 12号库房方案图纸 20210922.dwg  AGV任务码文档.docx  API模块接口手册.docx  TEST.tb  TEST2.tb  WCS开发流程.docx  【待确认版】无人叉车技术协议-0922-V1.0 - 坤厚.docx  北京国储项目-京东-坤厚无人叉车接口文档-1.0.0.1.docx  北京昌平库位命名规则定义--0926(2).xlsx  横梁货架储位.xlsx  流程.xmind  福沙库位命名规则定义(完整版)-4.19(1) - 副本.xlsx
resource/Map/: background_size.txt  changpin.pro  changpin.yaml  iodevice.json  lab.lb  line.ln  station.st  storage.sg  topology.nd
resource/sql/: a_wcs_table_list.sql  wcs_zc9.sql
src/: CMakeLists.txt
src/App/: CMakeLists.txt
src/App/Service_Core/: AGVMonitor.cpp  AGVMonitor.h  AssignMonitor.cpp  AssignMonitor.h  CMakeLists.txt  DODMonitor.cpp  DODMonitor.h  DataModel.cpp  DataModel.h  HttpAnalysisAndPackage.h  MainWnd.cpp  MainWnd.h  MyLabel.cpp  MyLabel.h  OrderDao.cpp  OrderDao.h  OrderMonitor.cpp  OrderMonitor.h  ProgressBarDelegate.cpp  ProgressBarDelegate.h  SendOrderConfirmLabel.cpp  SendOrderConfirmLabel.h  SendOrderConfirmStationLabel.cpp  SendOrderEquipmentLabel.cpp  SendOrderEquipmentLabel.h  SendOrderLabelWidget.cpp  SendOrderLabelWidget.h  SendOrderParkingLabel.cpp  SendOrderParkingLabel.h  StorageMonitor.cpp  StorageMonitor.h  TaskMonitor.cpp  TaskMonitor.h  main.cpp  skindialog.cpp  skindialog.h  skinitem.h
src/Lib/: CMakeLists.txt
src/Lib/ADODatabase/: ACS_Database.cpp  ADODatabase.cpp  ApiClient.cpp  ApiServer.cpp  CMakeLists.txt  DatabaseManage.cpp  MAP_Database.cpp  Oracle_Database.cpp  RabbitMQService.cpp  RabbitMqClient.cpp  WCS_Database.cpp
src/Lib/Common/: CMakeLists.txt  Common.cpp  Config.cpp
src/Lib/Core/: CMakeLists.txt  Event_Handler.cpp  ModelBridge.cpp  ModelEquipment.cpp  ModelStationConfirm.cpp  ModelStationParking.cpp  ModelStorage.cpp  Sub_Task.cpp  Task_Chain.cpp  Task_Chain_Manage.cpp
src/Lib/Manage/: AGV_Manage.cpp  AGV_System_Manage.cpp  Battery_Manage.cpp  CMakeLists.txt  Config_Manage.cpp  Mode_Manage.cpp  Order_Manage.cpp  PLC_Manage.cpp  Parking_Manage.cpp  Storage_Manage.cpp  finstcpcommand.cpp
src/Lib/comm/: CMakeLists.txt  Comm.cpp  Log.cpp  Object.cpp  TimerDiff.cpp  simplelog.cpp
src/Lib/transferdevice/: CMakeLists.txt  CRC.cpp  SerialPort.cpp  TCP_Client.cpp  TCP_Server.cpp  TransferDevice.cpp
